samples/_failures_safe/1761296969_c028c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e689f136.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_e689f136.c:144:9: error: expected expression at end of input
  144 |         if ((det > 0 && sub > INT_MAX - det) ||
      |         ^~
./samples/SAFE/__tmp_e689f136.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e689f136.c:144:9: error: expected declaration or statement at end of input
